Troublshooting prework picture and adding placeholder project

--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
             <section id="project">
                 <h3>Prework Project</h3>
                 <a href="https://derekbanister.github.io/prework-about-me/" target="blank">
-                    <img class="pics" src="prework1.png" alt="prework"></a>
+                    <img class="pics" src="pre.png" alt="prework"></a>
+            </section>
+            <section id="project">
+                <h3>Placeholder Project</h3>
+                <a href="https://derekbanister.github.io/prework-about-me/" target="blank">
+                    <img class="pics" src="placeholder.png" alt="placeholder"></a>
             </section>
     
         
