Added LinkedIn link to my picture

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <section id="me">
             <h2>About Me</h2>
             <p>My name is Derek Banister. I am 26 years old, born and raised in Pleasanton, CA. and I am a former law enforcement student and Police Academy graduate switching careers into the field of web development. I enjoy spending time with my dog Raider and my wife. </p>  
-            <img class="db" src="Me.jpg" alt="Derek">
+            <a href="https://www.linkedin.com/in/derek-banister/" target="blank">
+                <img class="db" src="Me.jpg" alt="code"></a>
         </section>
 
 
