--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
     
     <title>Derek Banister</title>
     
@@ -28,7 +28,7 @@
             <br>
             <p>My name is Derek Banister. I am 26 years old, born and raised in Pleasanton, CA. and I am a former law enforcement student and Police Academy graduate switching careers into the field of web development. I enjoy spending time with my dog Raider and my wife. </p>  
             <a href="https://www.linkedin.com/in/derek-banister/" target="blank">
-                <img class="db" src="Me.jpg" alt="code"></a>
+                <img class="db" src="Me.jpg" alt="Derek"></a>
         </section>
         <hr>
         <section>
@@ -78,9 +78,9 @@
         </section>
         <section id="socials">
             <h2>You can find my socials here!</h2>
-            <a href="https://www.linkedin.com/in/derek-banister/" class="fa fa-linkedin"></a>
+            <a href="https://www.linkedin.com/in/derek-banister/" target="blank" class="fa fa-linkedin"></a>
             <a href="#" class="fa fa-reddit"></a>
-            <a href="https://www.instagram.com/ddboisback/?hl=en" class="fa fa-instagram"></a>
+            <a href="https://www.instagram.com/ddboisback/?hl=en" target="blank" class="fa fa-instagram"></a>
         </section>
         <section>
             <a id="top" href="#">Back to Top</a>
