finishing touches with media queries and picture formatting

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h3>Code Refractor Project</h3>
                 <br>
                 <a href="https://derekbanister.github.io/Code-Refractor/" target="blank">
-                    <img class="pic1" src="code.png" alt="code"></a>
+                    <img class="pic1" src="refractor.png" alt="code"></a>
             </section>
         
             <section id="project">
