final changes to media queries css and some html and homework turn in

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 <body>
     <header class="header">
-    <h1 class="Derek">Derek Banister's Portfolio</h1>
+    <h1 class="Derek">Derek Banister</h1>
     </header>
     <main>
        
@@ -79,7 +79,7 @@
         <section id="socials">
             <h3>You can find my socials here!</h3>
             <a href="https://www.linkedin.com/in/derek-banister/" target="blank" class="fa fa-linkedin"></a>
-            <a href="https://www.reddit.com/" class="fa fa-reddit"></a>
+            <a href="https://www.reddit.com/"  target="blank" class="fa fa-reddit"></a>
             <a href="https://www.instagram.com/ddboisback/?hl=en" target="blank" class="fa fa-instagram"></a>
         </section>
         <section>
